--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -126,22 +126,15 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
+              href="https://irish.session.nz/tunes-archive/breetches-full-of-stitches/"
               target="_blank"
-              >The Boys Of Bluehill</a
-            >: Hornpipe, D
+              >The Britches Full Of Stitches</a
+            >: Polka, A
           </li>
           <li class="tune-name">
-            <a
-              href="https://dev.session.nz/tunes-archive/brian-borus-march-3-part/"
-              target="_blank"
-              >Brian Boru's</a
-            >: March, Am
-          </li>
-          <li class="tune-name">
-            <a href="https://thesession.org/tunes/10" target="_blank"
-              >The Butterfly</a
-            >: Slip-jig, Em
+            <a href="https://thesession.org/tunes/15" target="_blank"
+              >Calliope House</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
@@ -222,21 +215,9 @@
             >: Jig, D mix
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/49" target="_blank"
-              >The Harvest Home</a
-            >: Hornpipe, D
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/445" target="_blank"
               >Itzikel</a
             >: Frailach, Em
-          </li>
-          <li class="tune-name">
-            <a
-              href="https://dev.session.nz/tunes-archive/off-to-california/"
-              target="_blank"
-              >Going To California</a
-            >: Hornpipe, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1812" target="_blank"
@@ -266,18 +247,26 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/king-of-the-fairies/"
-              target="_blank"
-              >King Of The Fairies</a
-            >: Hornpipe, Em dor
-          </li>
-          <li class="tune-name">
-            <a
               href="https://dev.session.nz/tunes-archive/lark-in-the-morning/"
               target="_blank"
               >The Lark In The Morning</a
             >: Jig, D
           </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/2221" target="_blank"
+              >MacArthur Road</a
+            >: Reel, E
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/7041" target="_blank"
+              >Macedonian Oro</a
+            >: Horo, A
+          </li>
+          <!-- <li class="tune-name">
+            <a href="https://thesession.org/tunes/752" target="_blank"
+              >The Maid At The Well</a
+            >: Jig, G
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/72" target="_blank"
               >The Merry Blacksmith</a
@@ -310,9 +299,9 @@
             >: Jig, Am dor
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/85" target="_blank"
-              >The Rakes Of Mallow</a
-            >: Polka, G
+            <a href="https://thesession.org/tunes/710" target="_blank"
+              >The Queen Of The Rushes</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2639" target="_blank"
@@ -327,13 +316,6 @@
             >: Reel, A
           </li>
           <li class="tune-name">
-            <a
-              href="https://dev.session.nz/tunes-archive/rights-of-man/"
-              target="_blank"
-              >Rights Of Man</a
-            >: Hornpipe, Em dor
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/91" target="_blank"
               >The Roaring Barmaid</a
             >: Jig, G
@@ -346,11 +328,6 @@
             >: Jig, G
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/2320" target="_blank"
-              >Shoe The Donkey</a
-            >: Mazurka, G
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
@@ -359,13 +336,6 @@
             <a href="https://thesession.org/tunes/449" target="_blank"
               >Si Beag Si Mor</a
             >: Waltz, D
-          </li>
-          <li class="tune-name">
-            <a
-              href="https://dev.session.nz/tunes-archive/st-annes-reel/"
-              target="_blank"
-              >St. Anne's Reel</a
-            >: Reel, D
           </li>
           <li class="tune-name">
             <a href="" target="_blank"></a>
