--- a/sessionClass.html
+++ b/sessionClass.html
@@ -77,34 +77,71 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content name">Tunes of the week:</h3>
+        <h3 class="centered-content">Tunes of the week:</h3>
         <p class="tune-name">
           <a
-            href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+            href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
             target="_blank"
-            >Tripping Up The Stairs</a
+            >Drowsy Maggie</a
           >,
           <a
-            href="https://irish.session.nz/tunes-archive/kesh-jig/"
+            href="https://dev.session.nz/tunes-archive/josefins-waltz/"
             target="_blank"
-            >The Kesh</a
+            >Josefin's Waltz</a
+          >
+        </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content">Up Next:</h3>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/7905" target="_blank"
+            >Shove The Pig's Foot A Little Closer To The Fire</a
+          >,
+          <a href="https://thesession.org/tunes/14300" target="_blank"
+            >Angeline The Baker</a
           >
         </p>
       </div>
       <div>
-        <h3 class="centered-content name">Session Class Repertoire:</h3>
+        <h3 class="centered-content">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
               >Ashokan Farewell</a
             >: Waltz, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/blarney-pilgrim/"
               target="_blank"
               >The Blarney Pilgrim</a
             >: Jig, G
+          </li> -->
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
+              target="_blank"
+              >The Boys Of Bluehill</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/brian-borus-march-3-part/"
+              target="_blank"
+              >Brian Boru's</a
+            >: March, Am
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/10" target="_blank"
+              >The Butterfly</a
+            >: Slip jig, Em
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
+              target="_blank"
+              >Drowsy Maggie</a
+            >: Reel, Em dor
           </li>
           <li class="tune-name">
             <a
@@ -119,6 +156,18 @@
             >: March, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/49" target="_blank"
+              >The Harvest Home</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/josefins-waltz/"
+              target="_blank"
+              >Josefin's Waltz</a
+            >: Waltz, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
               target="_blank"
@@ -126,9 +175,23 @@
             >: Jig, G
           </li>
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/king-of-the-fairies/"
+              target="_blank"
+              >King Of The Fairies</a
+            >: Hornpipe, Em dor
+          </li>
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/16649" target="_blank"
               >The Music 'O Spey</a
             >: Strathspey, D
+          </li> -->
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/off-to-california/"
+              target="_blank"
+              >Off To California</a
+            >: Hornpipe, D
           </li>
           <li class="tune-name">
             <a
@@ -143,6 +206,20 @@
             >: Polka, G
           </li>
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/rights-of-man/"
+              target="_blank"
+              >Rights Of Man</a
+            >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/st-annes-reel/"
+              target="_blank"
+              >St. Anne's Reel</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
               >Shoe The Donkey</a
             >: Mazurka, G
@@ -151,6 +228,11 @@
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
             >: Waltz, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/106" target="_blank"
+              >The Swallowtail</a
+            >: Jig, Em
           </li>
           <li class="tune-name">
             <a
