Condensed css to one file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
-      <div class="container-content">
+      <div class="container-content cc-home">
         <p class="text">
           Welcome! We’re a collection of musos in the Whangarei area who enjoy
           playing acoustic trad folk and roots music. We host a weekly
