--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resources</title>
-    <link rel="stylesheet" href="./styles/resources.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -58,7 +58,7 @@
       <h2 class="name">Resources</h2>
     </div>
     <div class="container">
-      <div class="container-content">
+      <div class="container-content cc-resources">
         <div class="text">
           There are many great places to learn tunes online. Aside from the
           abundance of listening options (YouTube, Spotify etc), here are a
