--- a/sessionClass.html
+++ b/sessionClass.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Session Class</title>
-    <link rel="stylesheet" href="./styles/tunes.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content">Tunes of the week:</h3>
+        <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
           <a
             href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
@@ -92,7 +92,7 @@
         </p>
         <!-- </div>
       <div class="tunes-week"> -->
-        <h3 class="centered-content">Up Next:</h3>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
           <a href="https://thesession.org/tunes/7905" target="_blank"
             >Shove The Pig's Foot A Little Closer To The Fire</a
@@ -103,7 +103,7 @@
         </p>
       </div>
       <div>
-        <h3 class="centered-content">Session Class Repertoire:</h3>
+        <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
