--- a/tunes.html
+++ b/tunes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tunes</title>
-    <link rel="stylesheet" href="./styles/tunes.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -58,7 +58,7 @@
       <h2 class="name">Tunes</h2>
     </div>
     <div class="container">
-      <div class="container-content">
+      <div class="container-content cc-tunes">
         <div class="text">
           <a href="sessionClass.html" class="group">Session Class</a>: These are
           the tunes that we've taught each other and played together at the
@@ -70,9 +70,8 @@
           eye on the
           <a class="group" href="sessionClass.html">Session Class</a> page to
           stay current with the community repertoire.
-        </div>
-        <br />
-        <div class="text">
+          <br />
+          <br />
           <a href="fridayTunes.html" class="group">Friday Tunes</a>: These tunes
           are a bit more diverse and cover most of what's been played at Friday
           Tune Time at the Irish Wolf. They're not necessarily more challenging
