Added class name for correct margins

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -62,7 +62,7 @@
       <h2 class="name">Friday Tunes</h2>
     </div>
     <div class="container">
-      <div class="container-content">
+      <div class="container-content cc-tunes">
         <div class="text">
           <p>
             Here's a sample of some of the tunes played on Fridays at the Irish
