--- a/sessionClass.html
+++ b/sessionClass.html
@@ -62,7 +62,7 @@
       <h2 class="name">Session Class Tunes</h2>
     </div>
     <div class="container">
-      <div class="container-content">
+      <div class="container-content cc-tunes">
         <div class="text">
           <p>
             Most of the tunes below redirect to either the NZ Irish Session
