--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <p class="text">
           Welcome! We’re a collection of musos in the Whangarei area who enjoy
           playing acoustic trad folk and roots music. We host a weekly
-          <a href="sessionClass.html" class="group">Session Class</a> that
+          <a href="sessionClass.html" class="tune-group">Session Class</a> that
           teaches tunes, musicianship and etiquette. We also host
-          <a href="fridayTunes.html" class="group">Friday Tunes</a>
+          <a href="fridayTunes.html" class="tune-group">Friday Tunes</a>
           showcasing a more diverse repertoire played at an advanced level,
           including new and old tunes from around the world. This site is a
           place to discover new music and to grow a common repertoire in the
