--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,32 +79,38 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a
-            href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
-            target="_blank"
-            >Drowsy Maggie</a
+          <a href="https://thesession.org/tunes/7905" target="_blank"
+            >Shove The Pig's Foot A Little Closer To The Fire</a
           >,
-          <a
-            href="https://dev.session.nz/tunes-archive/josefins-waltz/"
-            target="_blank"
-            >Josefin's Waltz</a
+          <a href="https://thesession.org/tunes/14300" target="_blank"
+            >Angeline The Baker</a
+          >,
+          <a href="https://thesession.org/tunes/14425" target="_blank"
+            >Valse Efter Lasse I Lyby</a
           >
         </p>
         <!-- </div>
       <div class="tunes-week"> -->
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/7905" target="_blank"
-            >Shove The Pig's Foot A Little Closer To The Fire</a
+          <a
+            href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
+            target="_blank"
+            >The Maid Behind The Bar</a
           >,
-          <a href="https://thesession.org/tunes/14300" target="_blank"
-            >Angeline The Baker</a
+          <a href="https://thesession.org/tunes/562" target="_blank"
+            >Crested Hens</a
           >
         </p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/14300" target="_blank"
+              >Angeline The Baker</a
+            >: Polka, D
+          </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
               >Ashokan Farewell</a
@@ -225,6 +231,11 @@
             >: Mazurka, G
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/7905" target="_blank"
+              >Shove The Pig's Foot A Little Closer To The Fire</a
+            >: Reel, G
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
             >: Waltz, G
@@ -240,6 +251,11 @@
               target="_blank"
               >Tripping Up The Stairs</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/14425" target="_blank"
+              >Vals Efter Lasse I Lyby</a
+            >: Waltz, Am
           </li>
         </ul>
       </div>
