--- a/sessionClass.html
+++ b/sessionClass.html
@@ -112,6 +112,11 @@
             >: Polka, D
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/986" target="_blank"
+              >The Arran Boat Song</a
+            >: Waltz, Em dor
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
               >Ashokan Farewell</a
             >: Waltz, D
