Added new tunes for the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,20 +79,6 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/7905" target="_blank"
-            >Shove The Pig's Foot A Little Closer To The Fire</a
-          >,
-          <a href="https://thesession.org/tunes/14300" target="_blank"
-            >Angeline The Baker</a
-          >,
-          <a href="https://thesession.org/tunes/14425" target="_blank"
-            >Valse Efter Lasse I Lyby</a
-          >
-        </p>
-        <!-- </div>
-      <div class="tunes-week"> -->
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a
             href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
             target="_blank"
@@ -100,6 +86,25 @@
           >,
           <a href="https://thesession.org/tunes/562" target="_blank"
             >Crested Hens</a
+          >,
+          <a href="./musicFiles/björnlåten.pdf" target="_blank">Björnlåten</a>
+        </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a
+            href="https://dev.session.nz/tunes-archive/belltable-waltz/"
+            target="_blank"
+            >Bell Table</a
+          >,
+          <a
+            href="https://dev.session.nz/tunes-archive/breetches-full-of-stitches/"
+            target="_blank"
+            >Britches Full Of Stitches</a
+          >,
+          <a href="https://thesession.org/tunes/12963" target="_blank"
+            >Nigun Atik</a
           >
         </p>
       </div>
@@ -146,6 +151,11 @@
             <a href="https://thesession.org/tunes/10" target="_blank"
               >The Butterfly</a
             >: Slip jig, Em
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/562" target="_blank"
+              >Crested Hens</a
+            >: Waltz, Em dor
           </li>
           <li class="tune-name">
             <a
@@ -199,6 +209,13 @@
           </li> -->
           <li class="tune-name">
             <a
+              href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
+              target="_blank"
+              >The Maid Behind The Bar</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a
               href="https://dev.session.nz/tunes-archive/off-to-california/"
               target="_blank"
               >Off To California</a
@@ -220,7 +237,7 @@
             <a
               href="https://dev.session.nz/tunes-archive/rights-of-man/"
               target="_blank"
-              >Rights Of Man</a
+              >The Rights Of Man</a
             >: Hornpipe, Em dor
           </li>
           <li class="tune-name">
