--- a/resources.html
+++ b/resources.html
@@ -70,6 +70,7 @@
             <h3 class="group">Celtic:</h3>
             <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
             <a href="https://thesession.org/">The Session</a>
+            <a href="https://www.youtube.com/@TradTG4">TradTG4</a>
           </li>
           <li class="resource-content">
             <h3 class="group">North America:</h3>
