Updated session tunes

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -80,20 +80,6 @@
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
           <a
-            href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
-            target="_blank"
-            >The Maid Behind The Bar</a
-          >,
-          <a href="https://thesession.org/tunes/562" target="_blank"
-            >Crested Hens</a
-          >,
-          <a href="./musicFiles/björnlåten.pdf" target="_blank">Björnlåten</a>
-        </p>
-        <!-- </div>
-      <div class="tunes-week"> -->
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
-          <a
             href="https://dev.session.nz/tunes-archive/belltable-waltz/"
             target="_blank"
             >Bell Table</a
@@ -105,6 +91,23 @@
           >,
           <a href="https://thesession.org/tunes/12963" target="_blank"
             >Nigun Atik</a
+          >,
+          <a href="https://thesession.org/tunes/481" target="_blank"
+            >Bill Sullivan's</a
+          >
+        </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/86" target="_blank"
+            >Rakish Paddy</a
+          >,
+          <a href="https://thesession.org/tunes/9002" target="_blank"
+            >Maison De Glace</a
+          >,
+          <a href="https://thesession.org/tunes/566" target="_blank"
+            >The Little Beggarman</a
           >
         </p>
       </div>
@@ -126,6 +129,18 @@
               >Ashokan Farewell</a
             >: Waltz, D
           </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/belltable-waltz/"
+              target="_blank"
+              >Bell Table</a
+            >: Waltz, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/481" target="_blank"
+              >Bill Sullivan's</a
+            >: Polka, D (and A)
+          </li>
           <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/blarney-pilgrim/"
@@ -133,6 +148,10 @@
               >The Blarney Pilgrim</a
             >: Jig, G
           </li> -->
+          <li class="tune-name">
+            <a href="./musicFiles/björnlåten.pdf" target="_blank">Björnlåten</a
+            >: Polska, G
+          </li>
           <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
@@ -146,6 +165,13 @@
               target="_blank"
               >Brian Boru's</a
             >: March, Am
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/breetches-full-of-stitches/"
+              target="_blank"
+              >Britches Full Of Stitches</a
+            >: Polka, A
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/10" target="_blank"
@@ -213,6 +239,11 @@
               target="_blank"
               >The Maid Behind The Bar</a
             >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/12963" target="_blank"
+              >Nigun Atik</a
+            >
           </li>
           <li class="tune-name">
             <a
