--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,27 +79,6 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a
-            href="https://dev.session.nz/tunes-archive/belltable-waltz/"
-            target="_blank"
-            >Bell Table</a
-          >,
-          <a
-            href="https://dev.session.nz/tunes-archive/breetches-full-of-stitches/"
-            target="_blank"
-            >Britches Full Of Stitches</a
-          >,
-          <a href="https://thesession.org/tunes/12963" target="_blank"
-            >Nigun Atik</a
-          >,
-          <a href="https://thesession.org/tunes/481" target="_blank"
-            >Bill Sullivan's</a
-          >
-        </p>
-        <!-- </div>
-      <div class="tunes-week"> -->
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="https://thesession.org/tunes/86" target="_blank"
             >Rakish Paddy</a
           >,
@@ -108,6 +87,22 @@
           >,
           <a href="https://thesession.org/tunes/566" target="_blank"
             >The Little Beggarman</a
+          >
+        </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/8853" target="_blank"
+            >Da Lounge Bar</a
+          >,
+          <a href="https://thesession.org/tunes/20714" target="_blank"
+            >The Green Cake</a
+          >,
+          <a href="https://thesession.org/tunes/6697" target="_blank">Coffee</a
+          >,
+          <a href="https://thesession.org/tunes/197" target="_blank"
+            >Star of Munster</a
           >
         </p>
       </div>
@@ -234,6 +229,11 @@
             >: Strathspey, D
           </li> -->
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/566" target="_blank"
+              >The Little Beggarman</a
+            >: Hornpipe, A mix
+          </li>
+          <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
               target="_blank"
@@ -241,9 +241,14 @@
             >: Reel, D
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/9002" target="_blank"
+              >Maison De Glace</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/12963" target="_blank"
               >Nigun Atik</a
-            >
+            >: E Freygish
           </li>
           <li class="tune-name">
             <a
@@ -263,6 +268,11 @@
             <a href="https://thesession.org/tunes/85" target="_blank"
               >The Rakes Of Mallow</a
             >: Polka, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/86" target="_blank"
+              >Rakish Paddy</a
+            >: Reel, D mix
           </li>
           <li class="tune-name">
             <a
