Updated tune pages, resource links

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -77,6 +77,11 @@
       <div class="tunes-list">
         <ul>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/14300" target="_blank"
+              >Angeline The Baker</a
+            >: Polka, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/an-phis-fhliuch/"
               target="_blank"
@@ -135,6 +140,11 @@
             <a href="https://thesession.org/tunes/15" target="_blank"
               >Calliope House</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/703" target="_blank"
+              >Catharsis</a
+            >: Reel, Gm
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
@@ -268,6 +278,18 @@
             >: Jig, G
           </li> -->
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
+              target="_blank"
+              >The Maid Behind The Bar</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/9002" target="_blank"
+              >Maison De Glace</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/72" target="_blank"
               >The Merry Blacksmith</a
             >: Reel, D
@@ -304,6 +326,11 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/86" target="_blank"
+              >Rakish Paddy</a
+            >: Reel, D mix
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/2639" target="_blank"
               >Ramnee Ceilidh</a
             >: Reel, D
@@ -328,6 +355,11 @@
             >: Jig, G
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/98" target="_blank"
+              >The Sally Gardens</a
+            >: Reel, G
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
@@ -336,6 +368,18 @@
             <a href="https://thesession.org/tunes/449" target="_blank"
               >Si Beag Si Mor</a
             >: Waltz, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/182" target="_blank"
+              >The Silver Spear</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+              target="_blank"
+              >Tripping Up The Stairs</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a href="" target="_blank"></a>
