--- a/resources.html
+++ b/resources.html
@@ -68,13 +68,17 @@
         <ul class="resources">
           <li class="resource-content">
             <h3 class="group">Celtic:</h3>
-            <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
-            <a href="https://thesession.org/">The Session</a>
-            <a href="https://www.youtube.com/@TradTG4">TradTG4</a>
+            <a href="https://irish.session.nz/" target="_blank"
+              >NZ Irish Sessions,</a
+            >
+            <a href="https://thesession.org/" target="_blank">The Session</a>
+            <a href="https://www.youtube.com/@TradTG4" target="_blank"
+              >TradTG4</a
+            >
           </li>
           <li class="resource-content">
             <h3 class="group">North America:</h3>
-            <a href="https://tunearch.org/wiki/TTA"
+            <a href="https://tunearch.org/wiki/TTA" target="_blank"
               >The Traditional Tune Archive</a
             >
           </li>
