Added tunes and updated resource page

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -384,6 +384,11 @@
           <li class="tune-name">
             <a href="" target="_blank"></a>
           </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/602" target="_blank"
+              >Whiskey Before Breakfast</a
+            >: Reel, D
+          </li>
         </ul>
       </div>
     </div>
