--- a/resources.html
+++ b/resources.html
@@ -71,9 +71,14 @@
             <a href="https://irish.session.nz/" target="_blank"
               >NZ Irish Sessions,</a
             >
-            <a href="https://thesession.org/" target="_blank">The Session</a>
+            <a href="https://thesession.org/" target="_blank">The Session,</a>
             <a href="https://www.youtube.com/@TradTG4" target="_blank"
-              >TradTG4</a
+              >TradTG4,</a
+            >
+            <a
+              href="https://www.youtube.com/channel/UCE_cHdA5wcltfuaXyK67GQw/featured"
+              target="_blank"
+              >Comhaltas Foinn Seisiun</a
             >
           </li>
           <li class="resource-content">
@@ -83,13 +88,21 @@
             >
           </li>
           <li class="resource-content">
+            <h3 class="group">Various:</h3>
+            <a
+              href="https://www.youtube.com/@thegoodtunes/videos"
+              target="blank"
+              >The Good Tune</a
+            >
+          </li>
+          <!-- <li class="resource-content">
             <h3 class="group">Nordic:</h3>
             <a href=""></a> Coming Soon!
           </li>
           <li class="resource-content">
             <h3 class="group">Europe:</h3>
             <a href=""></a> Coming Soon!
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
