--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,30 +79,24 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/86" target="_blank"
-            >Rakish Paddy</a
+          <a href="https://thesession.org/tunes/8853" target="_blank"
+            >Da Lounge Bar</a
           >,
-          <a href="https://thesession.org/tunes/9002" target="_blank"
-            >Maison De Glace</a
+          <a href="https://thesession.org/tunes/6697" target="_blank">Coffee</a
           >,
-          <a href="https://thesession.org/tunes/566" target="_blank"
-            >The Little Beggarman</a
+          <a href="https://thesession.org/tunes/197" target="_blank"
+            >The Star of Munster</a
           >
         </p>
         <!-- </div>
       <div class="tunes-week"> -->
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/8853" target="_blank"
-            >Da Lounge Bar</a
-          >,
           <a href="https://thesession.org/tunes/20714" target="_blank"
             >The Green Cake</a
           >,
-          <a href="https://thesession.org/tunes/6697" target="_blank">Coffee</a
-          >,
-          <a href="https://thesession.org/tunes/197" target="_blank"
-            >Star of Munster</a
+          <a href="https://thesession.org/tunes/654" target="_blank"
+            >The Fermanagh</a
           >
         </p>
       </div>
@@ -174,6 +168,11 @@
             >: Slip jig, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/6697" target="_blank"
+              >Coffee</a
+            >: Jig, Am
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/562" target="_blank"
               >Crested Hens</a
             >: Waltz, Em dor
@@ -232,6 +231,11 @@
             <a href="https://thesession.org/tunes/566" target="_blank"
               >The Little Beggarman</a
             >: Hornpipe, A mix
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/8853" target="_blank"
+              >Da Lounge Bar</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a
@@ -299,9 +303,21 @@
             >: Reel, G
           </li>
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/sonnys-mazurka/"
+              target="_blank"
+              >Sonny's Mazurka</a
+            >: Mazurka, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
             >: Waltz, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/197" target="_blank"
+              >The Star Of Munster</a
+            >: Reel, Am
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/106" target="_blank"
