--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,24 +79,22 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/8853" target="_blank"
-            >Da Lounge Bar</a
+          <a href="https://thesession.org/tunes/20714" target="_blank"
+            >The Green Cake</a
           >,
-          <a href="https://thesession.org/tunes/6697" target="_blank">Coffee</a
-          >,
-          <a href="https://thesession.org/tunes/197" target="_blank"
-            >The Star of Munster</a
+          <a href="https://thesession.org/tunes/654" target="_blank"
+            >The Fermanagh</a
           >
         </p>
         <!-- </div>
       <div class="tunes-week"> -->
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/20714" target="_blank"
-            >The Green Cake</a
+          <a href="./musicFiles/jumpAtTheSun.jpg" target="_blank"
+            >Jump At The Sun</a
           >,
-          <a href="https://thesession.org/tunes/654" target="_blank"
-            >The Fermanagh</a
+          <a href="https://thesession.org/tunes/3809" target="_blank"
+            >The Flatbush Waltz</a
           >
         </p>
       </div>
@@ -138,7 +136,7 @@
             >: Jig, G
           </li> -->
           <li class="tune-name">
-            <a href="./musicFiles/björnlåten.pdf" target="_blank">Björnlåten</a
+            <a href="./musicFiles/björnlåten.jpg" target="_blank">Björnlåten</a
             >: Polska, G
           </li>
           <li class="tune-name">
@@ -185,6 +183,11 @@
             >: Reel, Em dor
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/654" target="_blank"
+              >The Fermanagh</a
+            >: Highland, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
               target="_blank"
@@ -195,6 +198,13 @@
             <a href="https://thesession.org/tunes/2516" target="_blank"
               >The Foggy Dew</a
             >: March, Em
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/green-cake/"
+              target="_blank"
+              >The Green Cake</a
+            >: Reel, F#m
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/49" target="_blank"
