Updated tunes of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,11 +79,10 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/20714" target="_blank"
-            >The Green Cake</a
+          <a href="https://thesession.org/tunes/445" target="_blank">Itzikel</a
           >,
-          <a href="https://thesession.org/tunes/654" target="_blank"
-            >The Fermanagh</a
+          <a href="./musicFiles/adventspolska.jpg" target="_blank"
+            >Adventspolska</a
           >
         </p>
         <!-- </div>
