--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -122,10 +122,7 @@
             >: Polka, A (or D)
           </li>
           <li class="tune-name">
-            <a
-              href="https://dev.session.nz/tunes-archive/blarney-pilgrim/"
-              target="_blank"
-            >
+            <a href="https://thesession.org/tunes/5" target="_blank">
               The Blarney Pilgrim</a
             >: Jig, G
           </li>
@@ -307,6 +304,11 @@
             >: Reel, D mix
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/56" target="_blank"
+              >The Old Favorite</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/out-on-the-ocean/"
               target="_blank"
@@ -382,12 +384,12 @@
             >: Jig, D
           </li>
           <li class="tune-name">
-            <a href="" target="_blank"></a>
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/602" target="_blank"
               >Whiskey Before Breakfast</a
             >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="" target="_blank"></a>
           </li>
         </ul>
       </div>
