--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,16 +79,6 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/445" target="_blank">Itzikel</a
-          >,
-          <a href="./musicFiles/adventspolska.jpg" target="_blank"
-            >Adventspolska</a
-          >
-        </p>
-        <!-- </div>
-      <div class="tunes-week"> -->
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="./musicFiles/jumpAtTheSun.jpg" target="_blank"
             >Jump At The Sun</a
           >,
@@ -96,10 +86,29 @@
             >The Flatbush Waltz</a
           >
         </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/703" target="_blank"
+            >Catharsis</a
+          >,
+          <a href="https://thesession.org/tunes/7041" target="_blank"
+            >Macedonian Oro</a
+          >,
+          <a href="https://thesession.org/tunes/92" target="_blank"
+            >The Irish Washerwoman</a
+          >
+        </p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
+          <li class="tune-name">
+            <a href="./musicFiles/adventspolska.jpg" target="_blank"
+              >Adventspolska</a
+            >: Polksa, G
+          </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/14300" target="_blank"
               >Angeline The Baker</a
@@ -209,6 +218,11 @@
             <a href="https://thesession.org/tunes/49" target="_blank"
               >The Harvest Home</a
             >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/445" target="_blank"
+              >Itzikel</a
+            >: Frailach, Em
           </li>
           <li class="tune-name">
             <a
