Added more html pages for my transcriptions

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -100,7 +100,7 @@
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
-            <a href="./musicFiles/adventspolska.jpg" target="_blank"
+            <a href="./tunes/adventspolska.html" target="_blank"
               >Adventspolska</a
             >: Polksa, G
           </li>
@@ -139,8 +139,8 @@
             >: Jig, G
           </li> -->
           <li class="tune-name">
-            <a href="./musicFiles/björnlåten.jpg" target="_blank">Björnlåten</a
-            >: Polska, G
+            <a href="./tunes/björnlåten.html" target="_blank">Björnlåten</a>:
+            Polska, G
           </li>
           <li class="tune-name">
             <a
