--- a/sessionClass.html
+++ b/sessionClass.html
@@ -82,7 +82,7 @@
           <a href="https://thesession.org/tunes/703" target="_blank"
             >Catharsis</a
           >,
-          <a href="/./tunes/macedonianHoro.html" target="_blank"
+          <a href="/tunes/macedonianHoro.html" target="_blank"
             >Macedonian Oro</a
           >
         </p>
