Trying to get vsCode to recognize change in folder case

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -96,6 +96,7 @@
           >, <a href="./musicFiles/horo.jpg" target="_blank">Macedonian Oro</a>
         </p> -->
       </div>
+      <div></div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
