Testing style sheet link

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -101,7 +101,7 @@
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
-            <a href="./tunes/adventspolska.html" target="_blank"
+            <a href="./Tunes/adventspolska.html" target="_blank"
               >Adventspolska</a
             >: Polksa, G
           </li>
@@ -140,7 +140,7 @@
             >: Jig, G
           </li> -->
           <li class="tune-name">
-            <a href="./tunes/björnlåten.html" target="_blank">Björnlåten</a>:
+            <a href="./Tunes/björnlåten.html" target="_blank">Björnlåten</a>:
             Polska, G
           </li>
           <li class="tune-name">
@@ -233,7 +233,7 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
-            <a href="./tunes/jumpAtTheSun.html" target="_blank"
+            <a href="./Tunes/jumpAtTheSun.html" target="_blank"
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
