Changed links so the site works - need to tinker with file path more

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -82,7 +82,11 @@
           <a href="https://thesession.org/tunes/703" target="_blank"
             >Catharsis</a
           >,
-          <a href="./Tunes/macedonianHoro.html" target="_blank"
+
+          <!-- <a href="./Tunes/macedonianHoro.html" target="_blank"
+            >Macedonian Oro</a
+          > -->
+          <a href="https://thesession.org/tunes/7041" target="_blank"
             >Macedonian Oro</a
           >
         </p>
@@ -100,8 +104,13 @@
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="./Tunes/adventspolska.html" target="_blank"
+              >Adventspolska</a
+            >: Polksa, G
+          </li> -->
+          <li class="tune-name">
+            <a href="./musicFiles/adventspolska.jpg" target="_blank"
               >Adventspolska</a
             >: Polksa, G
           </li>
@@ -139,9 +148,13 @@
               >The Blarney Pilgrim</a
             >: Jig, G
           </li> -->
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="./Tunes/björnlåten.html" target="_blank">Björnlåten</a>:
             Polska, G
+          </li> -->
+          <li class="tune-name">
+            <a href="./musicFiles/björnlåten.jpg" target="_blank">Björnlåten</a
+            >: Polska, G
           </li>
           <li class="tune-name">
             <a
@@ -232,8 +245,13 @@
               >Josefin's Waltz</a
             >: Waltz, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="./Tunes/jumpAtTheSun.html" target="_blank"
+              >Jump At The Sun</a
+            >: Jig, Gm
+          </li> -->
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/736" target="_blank"
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
