--- a/Tunes/macedonianHoro.html
+++ b/Tunes/macedonianHoro.html
@@ -17,16 +17,16 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="jumpAtTheSun.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="./tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="./sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
                 <a href="/fridayTunes.html">Friday Tunes</a>
@@ -35,7 +35,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="./resources.html">Resources</a>
         </li>
         <li class="nav-item">
           <a class="nav-name" href="/articles.html">Articles</a>
@@ -45,7 +45,7 @@
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -67,7 +67,7 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/macedonianHoro.jpg"
+        src="../musicFiles/macedonianHoro.jpg"
         alt="Sheet music"
       />
     </div>
