Still testing file paths

--- a/Tunes/macedonianHoro.html
+++ b/Tunes/macedonianHoro.html
@@ -17,19 +17,19 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="jumpAtTheSun.html">Whangarei Tunes</a>
+          <a href="../index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="./tunes.html">Tunes</a>
+          <a class="nav-name" href="../tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="./sessionClass.html">Session Class</a>
+                <a href="../sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
