--- a/Tunes/macedonian-horo.html
+++ b/Tunes/macedonian-horo.html
@@ -35,10 +35,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="./resources.html">Resources</a>
+          <a class="nav-name" href="../resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../articles.html">Articles</a>
         </li>
         <li class="nav-item">
           <a
