Updated Macedonian Horo to use my page vs the session

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -86,7 +86,7 @@
           <!-- <a href="./Tunes/macedonianHoro.html" target="_blank"
             >Macedonian Oro</a
           > -->
-          <a href="https://thesession.org/tunes/7041" target="_blank"
+          <a href="/Tunes/macedonian-horo.html" target="_blank"
             >Macedonian Oro</a
           >
         </p>
