--- a/sessionClass.html
+++ b/sessionClass.html
@@ -82,11 +82,7 @@
           <a href="https://thesession.org/tunes/703" target="_blank"
             >Catharsis</a
           >,
-
-          <!-- <a href="./Tunes/macedonianHoro.html" target="_blank"
-            >Macedonian Oro</a
-          > -->
-          <a href="/Tunes/macedonian-horo.html" target="_blank"
+          <a href="./Tunes/macedonianHoro.html" target="_blank"
             >Macedonian Oro</a
           >
         </p>
