More file path testing

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -81,8 +81,8 @@
         <p class="tune-name">
           <a href="https://thesession.org/tunes/703" target="_blank"
             >Catharsis</a
-          >,
-          <a href="./Tunes/macedonianHoro.html" target="_blank"
+          >
+          <a href="./Tunes/macedonian-horo.html" target="_blank"
             >Macedonian Oro</a
           >
         </p>
