Updated two more files using my transcriptions

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -144,14 +144,14 @@
               >The Blarney Pilgrim</a
             >: Jig, G
           </li> -->
-          <!-- <li class="tune-name">
+          <li class="tune-name">
             <a href="./Tunes/björnlåten.html" target="_blank">Björnlåten</a>:
             Polska, G
-          </li> -->
-          <li class="tune-name">
+          </li>
+          <!-- <li class="tune-name">
             <a href="./musicFiles/björnlåten.jpg" target="_blank">Björnlåten</a
             >: Polska, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
@@ -179,9 +179,8 @@
             >: Slip jig, Em
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/6697" target="_blank"
-              >Coffee</a
-            >: Jig, Am
+            <a href="./Tunes/jump-at-the-sun.html" target="_blank">Coffee</a>:
+            Jig, Am
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/562" target="_blank"
