Corrected link for jump at the sun

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -240,16 +240,16 @@
               >Josefin's Waltz</a
             >: Waltz, D
           </li>
-          <!-- <li class="tune-name">
-            <a href="./Tunes/jumpAtTheSun.html" target="_blank"
-              >Jump At The Sun</a
-            >: Jig, Gm
-          </li> -->
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/736" target="_blank"
+            <a href="./Tunes/jump-at-the-sun.html" target="_blank"
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
+          <!-- <li class="tune-name">
+            <a href="https://thesession.org/tunes/736" target="_blank"
+              >Jump At The Sun</a
+            >: Jig, Gm
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
