Updated page for June 12th

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -187,6 +187,11 @@
             >: Slip jig, F#m
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/1080" target="_blank"
+              >Father O'Flynn</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
@@ -321,6 +326,11 @@
               target="_blank"
               >Pipe On The Hob</a
             >: Jig, Am dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/1609" target="_blank"
+              >Planxty George Brabazon</a
+            >: March, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/710" target="_blank"
