--- a/sessionClass.html
+++ b/sessionClass.html
@@ -89,12 +89,11 @@
         <!-- </div>
       <div class="tunes-week"> -->
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">Stay tuned - review and practice!</p>
-        <!-- <p class="tune-name">
-          <a href="https://thesession.org/tunes/703" target="_blank"
-            >Catharsis</a
-          >, <a href="./musicFiles/horo.jpg" target="_blank">Macedonian Oro</a>
-        </p> -->
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/popular" target="_blank"
+            >Exploring Irish session classics</a
+          >
+        </p>
       </div>
       <div></div>
       <div>
