--- a/Tunes/adventspolska.html
+++ b/Tunes/adventspolska.html
@@ -66,5 +66,17 @@
         alt="Sheet music"
       />
     </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/2fSRnIDXIaEZZb3FJughO4?utm_source=generator"
+        width="100%"
+        height="250"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
   </body>
 </html>
