--- a/Tunes/macedonian-horo.html
+++ b/Tunes/macedonian-horo.html
@@ -63,6 +63,15 @@
         >
         to see different versions and keys plus discussion and comments.
       </p>
+      <p>
+        To play the rhythm, evenly count each 7 beats per measure. This
+        particular piece uses the grouping of 3 2 2 with the accent on the first
+        beat of each group (<strong>1</strong> 2 3 <strong>1</strong> 2
+        <strong>1</strong> 2). I learned to count this rhythm by saying words
+        consisting of 2 and 3 syllables eg "Pineapple Mango Mango", emphasizing
+        or accenting the first syllable of each word. I've also heard people use
+        'long and 'short' beats, in this case 'long short short'.
+      </p>
     </div>
     <div class="sheetMusicContainer">
       <img
@@ -71,5 +80,30 @@
         alt="Sheet music"
       />
     </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/2bNPVKrolhsHVXqBoqkn39?utm_source=generator"
+        width="100%"
+        height="250"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+    <!-- <div class="vidwrapper">
+      <div class="vidcontainer">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/J-J4RL-v7W0"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div> -->
   </body>
 </html>
